<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:background="@drawable/add_info_bg" android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical" tools:context="com.tefsalkw.activity.AddressesActivity">

    <include android:id="@+id/toolbar" layout="@layout/toolbar"/>


        <LinearLayout android:layout_alignParentBottom="true" android:layout_height="wrap_content" android:layout_marginBottom="?attr/actionBarSize" android:layout_width="match_parent" android:orientation="vertical" android:padding="@dimen/margin_small">

            <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/additional_info" android:textColor="@color/colorAccent" android:textSize="@dimen/text_large" android:textStyle="bold"/>
            <TextView android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_xsmall" android:layout_width="wrap_content" android:text="@string/additional_note" android:textColor="@color/colorAccent" android:textSize="@dimen/text_small"/>


            <LinearLayout android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_mid" android:layout_width="match_parent" android:orientation="vertical">

                <TextView android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_xsmall" android:layout_width="wrap_content" android:text="@string/hint_gender" android:textColor="@color/colorDGray" android:textSize="@dimen/text_xsmall"/>

                <EditText android:drawableRight="@drawable/drop_down" android:id="@+id/input_country" android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingBottom="@dimen/margin_mid" android:paddingRight="@dimen/margin_mid" android:paddingTop="@dimen/margin_small" android:singleLine="true" android:text="@string/fragment_additional_info_input_country_text" android:textColor="@color/colorTheme" android:textColorHint="@color/colorTheme" android:textSize="@dimen/text_normal"/>

            </LinearLayout>
            <LinearLayout android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_xsmall" android:layout_width="match_parent" android:orientation="vertical">

                <TextView android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_xsmall" android:layout_width="wrap_content" android:text="@string/hint_dob" android:textColor="@color/colorDGray" android:textSize="@dimen/text_xsmall"/>

                <EditText android:id="@+id/input_block" android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingBottom="@dimen/margin_mid" android:paddingTop="@dimen/margin_small" android:singleLine="true" android:text="@string/fragment_additional_info_input_block_text" android:textColor="@color/colorTheme" android:textColorHint="@color/colorTheme" android:textSize="@dimen/text_normal"/>

            </LinearLayout>

            <LinearLayout android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_xsmall" android:layout_width="match_parent" android:orientation="vertical">

                <TextView android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_xsmall" android:layout_width="wrap_content" android:text="@string/hint_nationality" android:textColor="@color/colorDGray" android:textSize="@dimen/text_xsmall"/>

                <EditText android:drawableRight="@drawable/drop_down" android:id="@+id/input_city" android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingBottom="@dimen/margin_mid" android:paddingRight="@dimen/margin_mid" android:paddingTop="@dimen/margin_small" android:singleLine="true" android:text="@string/fragment_additional_info_input_city_text" android:textColor="@color/colorTheme" android:textColorHint="@color/colorTheme" android:textSize="@dimen/text_normal"/>

            </LinearLayout>


            <Button android:background="@color/colorTheme" android:id="@+id/buttonSignUp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_small" android:layout_width="match_parent" android:text="@string/btn_submit" android:textColor="@color/colorWhite" android:textSize="@dimen/text_normal"/>
        </LinearLayout>
</RelativeLayout>
