<?xml version="1.0" encoding="utf-8" standalone="no"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/colorPrimary" android:fitsSystemWindows="true" android:layout_height="match_parent" android:layout_width="match_parent">

    <include android:id="@+id/include" layout="@layout/toolbar_cart"/>

    <TextView android:background="@color/tabColorBg" android:gravity="center" android:id="@+id/header_txt" android:layout_alignParentStart="true" android:layout_below="@+id/include" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="10dp" android:text="@string/cart_header_txt_text" android:textColor="@color/colorAccent"/>

    <LinearLayout android:background="@color/colorPrimary" android:layout_alignParentStart="true" android:layout_below="@+id/header_txt" android:layout_height="match_parent" android:layout_width="match_parent">

        <android.support.v7.widget.RecyclerView android:id="@+id/recycler_view" android:layout_height="match_parent" android:layout_marginBottom="100dp" android:layout_width="match_parent" android:scrollbars="vertical"/>

    </LinearLayout>

    <LinearLayout android:background="@color/tabColorBg" android:gravity="center" android:id="@+id/footer" android:layout_alignParentBottom="true" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">

        <TextView android:id="@+id/amount" android:layout_centerHorizontal="true" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_width="wrap_content" android:text="@string/cart_amount_text" android:textColor="@color/colorAccent" android:textSize="@dimen/text_large"/>

        <TextView android:id="@+id/discount" android:layout_above="@+id/purchase" android:layout_centerHorizontal="true" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/cart_discount_text" android:textSize="@dimen/text_small"/>

        <Button android:background="#263238" android:id="@+id/btn_purchase" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:layout_marginEnd="20dp" android:layout_marginStart="20dp" android:layout_marginTop="10dp" android:layout_width="match_parent" android:text="@string/cart_btn_purchase_text" android:textColor="#fafafa" android:textSize="@dimen/text_large"/>

    </LinearLayout>

</RelativeLayout>
