<?xml version="1.0" encoding="utf-8" standalone="no"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:background="@drawable/sign_up_bg_blur" android:fitsSystemWindows="true" android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical" tools:context="com.tefsalkw.activity.SendMailActivity">

    <include android:id="@+id/toolbar" layout="@layout/toolbar_sendmail"/>

    <TextView android:id="@+id/textView5" android:layout_below="@+id/toolbar" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginStart="10dp" android:layout_marginTop="10dp" android:layout_width="wrap_content" android:text="@string/activity_send_mail_textView5_text"/>

    <EditText android:background="@android:color/transparent" android:hint="@string/activity_send_mail_txt_email_title_hint" android:id="@+id/txt_email_title" android:inputType="textEmailAddress" android:layout_below="@+id/toolbar" android:layout_height="wrap_content" android:layout_marginEnd="10dp" android:layout_marginStart="80dp" android:layout_marginTop="10dp" android:layout_width="match_parent" android:singleLine="true" android:textColorHint="@color/colorTheme" android:textSize="@dimen/text_normal"/>

    <View android:background="@color/colorDivider" android:id="@+id/devider" android:layout_below="@+id/txt_email_title" android:layout_height="1dp" android:layout_marginBottom="12dp" android:layout_marginEnd="10dp" android:layout_marginStart="10dp" android:layout_marginTop="10dp" android:layout_width="match_parent"/>


    <EditText android:background="@android:color/transparent" android:gravity="top" android:hint="@string/hint_email_message" android:id="@+id/txt_email_message" android:inputType="textMultiLine" android:layout_below="@+id/devider" android:layout_height="match_parent" android:layout_margin="12dp" android:layout_marginTop="18dp" android:layout_width="match_parent" android:textSize="@dimen/text_normal"/>


</RelativeLayout>
