<?xml version="1.0" encoding="utf-8" standalone="no"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/llSublist"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical">

        <TextView
            android:gravity="start"
            android:id="@+id/txtTailorItem"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/row_tailors_items_txtTailorItem_text"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerSubList"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <View
        android:background="@drawable/round_gray_shape"
        android:layout_below="@+id/llSublist"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent" />


    <TextView
        android:gravity="end"
        android:id="@+id/txtPrice"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:text="@string/row_tailors_items_txtPrice_text"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:background="@color/colorAccent"
        android:id="@+id/btnAdd"
        android:layout_alignParentEnd="true"
        android:layout_height="40dp"
        android:layout_width="wrap_content"
        android:text="@string/row_tailors_items_btnAdd_text"
        android:textColor="@color/colorWhite" />


</RelativeLayout>
